<resources>
    <string name="app_name">PJATK</string>
    <string name="app_ver">App version</string>
    <string name="student">Student</string>
    <string name="schedule">Schedule</string>
    <string name="marks">Marks</string>
    <string name="ftp">FTP</string>
    <string name="fees">Fees</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="log_in">Login</string>
    <string name="password">Password</string>
    <string name="login_error">Wrong login or password.</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="useful_information">Useful Information</string>
    <string name="wait">Please wait</string>
    <string name="connect_error">Connection error.</string>
    <string name="server_error">PJATK API server not responding</string>
    <string name="refresh">Refresh</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="download">File Download</string>
    <string name="download_progress">Download in progress</string>
    <string name="download_complete">Download complete</string>
    <string name="download_cancel">Download cancelled</string>
    <string name="download_wait">Waiting for download</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cant_open_file">No handler for this type of file</string>
    <string name="app_settings">App Settings</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="permissions_declined">Permissions Declined</string>
    <string name="permissions_message">In order to save downloaded files, access to storage is needed. Please enable these permissions from the app settings.</string>
    <string name="permissions_message2">In order to save downloaded files, the app needs access to the storage.</string>
    <string name="choose_lang">Choose language</string>

    <string name="tab_student_info">Information</string>
    <string name="tab_student_fees">Fees</string>
    <string name="tab_student_marks">Marks</string>
    <string name="average_point">Average point</string>
    <string name="studies">Studies</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="groups">Groups</string>
    <string name="status">Status</string>
    <string name="balance">Balance</string>
    <string name="payments">Payments</string>
    <string name="your_payments_info">Information about your payments</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="full_history">Full history</string>
    <string name="total_amount_of_withdrawals">Total amount of withdrawals</string>
    <string name="total_amount_of_payments">Total amount of payments</string>
    <string name="total_amount_of_receivables">Total amount of receivables</string>
    <string name="your_balance_info">Your balance info</string>
    <string name="description">Description</string>
    <string name="receivables">Receivables</string>
    <string name="your_current_receivables_info">Your current receivables info</string>
    <string name="studies_average">Studies grade average</string>
    <string name="year_average">Last year grade average</string>
    <string name="exam">Exam</string>
    <string name="pass">Pass</string>
    <string name="building">Building</string>
    <string name="logout">Log out</string>
    <string name="language">Language</string>

    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="russian">Russian</string>
    <string name="name">Name</string>
    <string name="number_instalment">Number of an instalment</string>
    <string name="total_number_of_instalments">Total number of instalments</string>
    <string name="due_date">Due date</string>
    <string name="about_description">This application is not official PJATK app. Developed by student of 2nd year Information technology. I would appreciate any suggestions and assistance.</string>
    <string name="about">About app</string>
    <string name="about_connect">Connect with us</string>
    <string name="app_ver_number" translatable="false">Beta 1</string>
    <string name="no_lessons">No lessons for this day</string>
    <string name="marks_info">Information about your marks</string>
    <string name="subject">Subject</string>
    <string name="type">Type</string>
    <string name="mark">Mark</string>
    <string name="average">Average</string>
    <string name="average_marks_info">Information about your average marks</string>


    <string name="credentials_error">Wrong login or password</string>

    <string name="all_permissions_denied_feedback">Please enable permissions from the app settings.</string>
    <string name="permission_rationale_settings_button_text">Open</string>
    <string name="permission_rationale_title">Permissions Required</string>
    <string name="permission_rationale_message">In order to save downloaded files, the app needs access to the storage.</string>
    <string name="account">Account</string>
    <string name="your_account_info">Your individual account number</string>
    <string name="pjatk">PJATK</string>
    <string name="specialization">Specialization</string>
    <string name="no">No</string>
    <string name="download_error">Error while downloading</string>
    <string name="download_restriction">You can download only one file at a time</string>
    <string name="search_hint">Search</string>
    <string name="maps">Maps</string>
    <string name="more">More</string>
    <string name="basement">Basement</string>
    <string name="ground_floor">Ground floor</string>
    <string name="first_floor">First floor</string>
    <string name="second_floor">Second floor</string>
    <string name="third_floor">Third floor</string>
    <string name="map_loading_error">Map loading has failed</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
</resources>
