<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_student"
        android:icon="@drawable/account"
        android:title="@string/student" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/newspaper"
        android:title="@string/more" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/calendar"
        android:title="@string/schedule" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/maps"
        android:title="@string/maps" />

    <item
        android:id="@+id/navigation_ftp"
        android:icon="@drawable/network_download"
        android:title="@string/ftp" />
</menu>