<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/text_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/average"
            android:textAlignment="textStart"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_average_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/average_marks_info"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/text_average"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_average" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:listDivider"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_average_info" />

        <TextView
            android:id="@+id/text_average_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:textStyle="bold"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/text_average_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/mark"
            android:textStyle="bold"
            card_view:layout_constraintHorizontal_bias="0.704"
            card_view:layout_constraintLeft_toRightOf="@+id/text_average_type"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:listDivider"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_average_mark" />

        <TextView
            android:id="@+id/text_average_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/year_average"
            card_view:layout_constraintLeft_toLeftOf="@+id/text_average_type"
            card_view:layout_constraintRight_toLeftOf="@+id/average_year"
            card_view:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/average_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:text=""
            card_view:layout_constraintBottom_toBottomOf="@+id/text_average_year"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/text_average_mark"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/text_average_year"
            card_view:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:background="?android:listDivider"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_average_year" />

        <TextView
            android:id="@+id/text_average_studies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/studies_average"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="@+id/text_average_year"
            card_view:layout_constraintRight_toLeftOf="@+id/average_studies"
            card_view:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/average_studies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:text=""
            card_view:layout_constraintBottom_toBottomOf="@+id/text_average_studies"
            card_view:layout_constraintLeft_toLeftOf="@+id/average_year"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/text_average_studies"
            card_view:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>