<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/receivable_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            tools:text="ITN" />

        <TextView
            android:id="@+id/receivable_item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            tools:text="40 PLN" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/due_date"
            android:textAlignment="textStart"
            android:textColor="@color/primaryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/receivable_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryText"
            tools:text="26/04/2016" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_instalment"
            android:textAlignment="textStart"
            android:textColor="@color/primaryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/receivable_item_instalment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryText"
            tools:text="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_number_of_instalments"
            android:textAlignment="textStart"
            android:textColor="@color/primaryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/receivable_item_total_instalment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryText"
            tools:text="5" />
    </LinearLayout>

</LinearLayout>